--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,9 +36,8 @@ sonarqube:
         -Dsonar.login=${SONAR_TOKEN}
         -Dsonar.projectVersion=${CI_COMMIT_TAG}
   allow_failure: true
-  rules:
-    - if: $CI_COMMIT_TAG
-    - if: $CI_COMMIT_BRANCH == "main"
+  only:
+    - main
 
 build_image:
   stage: build
@@ -55,14 +54,10 @@ build_image:
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
     - docker-compose -f docker-compose.yml build --no-cache --pull
-    - echo "Intentando obtener el tag con git describe..."
-    - export GIT_TAG=$(git describe --tags --exact-match HEAD 2>/dev/null || echo "main")
-    - echo "Tag obtenido con git describe:$GIT_TAG"
-    - export IMAGE_TAG_FOR_DOCKER="$GIT_TAG"
-    - echo "Etiquetando imagen con:$IMAGE_TAG_FOR_DOCKER"
-    - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:$IMAGE_TAG_FOR_DOCKER"
-    - docker push "$REGISTRY_URL/adrian-manuel/spvending-managment:$IMAGE_TAG_FOR_DOCKER"
-    - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+    - echo "Valor de CI_COMMIT_REF_NAME:$CI_COMMIT_REF_NAME"
+    - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
+    - docker push "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
+    - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
     - docker push "$IMAGE_NAME_LATEST"
   after_script:
     - docker logout $REGISTRY_URL
