--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,9 @@ sonarqube:
         -Dsonar.login=${SONAR_TOKEN}
         -Dsonar.projectVersion=${CI_COMMIT_TAG}
   allow_failure: true
+  rules:
+    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
+      when: always
 
 build_image:
   stage: build
@@ -56,8 +59,8 @@ build_image:
   after_script:
     - docker logout $REGISTRY_URL
   rules:
-    - if: $CI_COMMIT_TAG
-    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
+      when: always
 
 
 deploy_app:
@@ -79,3 +82,6 @@ deploy_app:
     - docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
   after_script:
     - docker logout $REGISTRY_URL
+  rules:
+    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
+      when: always
