--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
-  IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
+  IMAGE_NAME_LATEST: "$IMAGE_NAME_BASE:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
 stages:
@@ -51,11 +51,17 @@ build_image:
     - echo "IMAGE_NAME_LATEST:$IMAGE_NAME_LATEST"
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
-    - docker-compose -f docker-compose.yml build --no-cache --pull
-    - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
-    - docker push "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
-    - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
-    - docker push "$IMAGE_NAME_LATEST"
+      - docker-compose -f docker-compose.yml build --no-cache --pull
+      - echo "Obteniendo el tag con git describe..."
+      - export IMAGE_TAG=$(git describe --tags --exact-match HEAD 2>/dev/null || echo "main")
+      - echo "Tag obtenido:$IMAGE_TAG"
+      - export IMAGE_NAME_WITH_TAG="$IMAGE_NAME_BASE:$IMAGE_TAG"
+      - echo "Etiquetando imagen como:$IMAGE_NAME_WITH_TAG"
+      - docker tag spvending-api-image "$IMAGE_NAME_WITH_TAG"
+      - docker push "$IMAGE_NAME_WITH_TAG"
+      - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+      - docker push "$IMAGE_NAME_LATEST"
+
   after_script:
     - docker logout $REGISTRY_URL
   rules:
@@ -82,6 +88,3 @@ deploy_app:
     - docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
   after_script:
     - docker logout $REGISTRY_URL
-  rules:
-    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
-      when: always
