--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ build_image:
   rules:
     - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
       when: always
-
+  needs: ["sonarqube"]
 
 deploy_app:
   stage: deploy
