--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,3 +88,6 @@ deploy_app:
     - docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
   after_script:
     - docker logout $REGISTRY_URL
+  rules:
+    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
+      when: always
