--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ sonarqube:
         -Dsonar.projectVersion=${CI_COMMIT_TAG}
   allow_failure: true
   rules:
-    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_TAG
       when: always
 build_image:
   stage: build
@@ -63,7 +63,7 @@ build_image:
   after_script:
     - docker logout $REGISTRY_URL
   rules:
-    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_TAG
       when: always
   needs: ["sonarqube"]
 
@@ -87,5 +87,5 @@ deploy_app:
   after_script:
     - docker logout $REGISTRY_URL
   rules:
-    - if: $CI_COMMIT_TAG && $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_TAG
       when: always
