--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,6 +119,7 @@ deploy_app_staging:
     - docker logout $REGISTRY_URL
   rules:
     - if: $CI_COMMIT_TAG
+      when: manual
 
 deploy_app_production:
   stage: deploy_production
