--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,8 @@
 image: docker:latest
 
 variables:
-  REGISTRY_URL: "localhost:5050"
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
-
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
   IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
   IMAGE_NAME_LATEST: "$IMAGE_NAME_BASE:latest"
@@ -59,13 +57,13 @@ build_image:
   stage: build
   tags:
     - build
-
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
-                  echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
                   docker-compose -f docker-compose.yml build --no-cache --pull
                   docker tag spvending-api-image "$IMAGE_NAME"
                   docker push "$IMAGE_NAME"
@@ -80,7 +78,7 @@ build_image:
   
 
   after_script:
-    - docker logout $REGISTRY_URL
+    - docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG
       when: always
@@ -97,7 +95,7 @@ deploy_app_staging:
     DEPLOY_TAG: "$CI_COMMIT_TAG"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
@@ -116,7 +114,7 @@ deploy_app_staging:
         echo "No es un tag. Saltando build."
       fi
   after_script:
-    - docker logout $REGISTRY_URL
+    - docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG
       when: manual
@@ -131,7 +129,7 @@ deploy_app_production:
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
@@ -150,7 +148,7 @@ deploy_app_production:
         echo "No es un tag. Saltando despliegue."
       fi
   after_script:
-    - docker logout $REGISTRY_URL
+    - docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG
       when: manual
