--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ variables:
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_NAME_BASE: "$CI_REGISTRY/adrian-manuel/spvending-managment"
-  IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
 
 stages:
   - test
@@ -63,8 +62,8 @@ build_image:
         git fetch origin main
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
                   docker-compose -f docker-compose.yml build --no-cache --pull
-                  docker tag spvending-api-image "$IMAGE_NAME"
-                  docker push "$IMAGE_NAME"
+                  docker tag spvending-api-image "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
+                  docker push "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
           else
               echo "El tag NO proviene de main. Saltando build."
         fi
@@ -88,7 +87,7 @@ deploy_app_staging:
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
-    DEPLOY_TAG: "$CI_COMMIT_TAG"
+    DEPLOY_TAG: $CI_COMMIT_TAG
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
