--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,9 +48,9 @@ sonarqube:
       fi
 
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/'
       when: always
-
+  allow_failure: true
 build_image:
   stage: build
   tags:
@@ -76,7 +76,7 @@ build_image:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/'
       when: always
   needs: ["sonarqube"]
 
@@ -112,7 +112,7 @@ deploy_app_staging:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/'
       when: manual
 
 deploy_app_production:
@@ -146,5 +146,5 @@ deploy_app_production:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/'
       when: manual
