--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ deploy_app_staging:
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
-    DEPLOY_TAG: "$CI_COMMIT_TAG"
+    DEPLOY_TAG: "${CI_COMMIT_TAG#deploy-staging-}"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
