--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,6 @@ deploy_app_staging:
   stage: deploy_staging
   tags:
     - deploy
-  needs: ["build_image"]
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
@@ -111,7 +110,7 @@ deploy_app_staging:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
+    - if: $CI_COMMIT_TAG=~ /^deploy-staging-v\d+\.\d+\.\d+$/
       when: manual
 
 deploy_app_production:
@@ -120,7 +119,7 @@ deploy_app_production:
     - deploy
   services: []
   variables:
-    DEPLOY_TAG: "$CI_COMMIT_TAG"
+    DEPLOY_TAG: "$CI_COMMIT_TAG#deploy-production-"
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
@@ -145,5 +144,5 @@ deploy_app_production:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
+    - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
       when: manual
