--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,7 @@ deploy_app_staging:
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
-          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-staging-}"
+          export DEPLOY_TAG=$(echo "$CI_COMMIT_TAG" | sed -E 's/^deploy-staging-(v[0-9]+\.[0-9]+\.[0-9]+)$/\1/')
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans
