--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,6 +87,7 @@ deploy_app_staging:
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
     DOCKER_HOST: "unix:///var/run/docker.sock"
+    DEPLOY_TAG: "v1.0.0"
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
@@ -94,7 +95,7 @@ deploy_app_staging:
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
-          export DEPLOY_TAG=$(echo "$CI_COMMIT_TAG" | sed -E 's/^deploy-staging-(v[0-9]+\.[0-9]+\.[0-9]+)$/\1/')
+          #export DEPLOY_TAG=$(echo "$CI_COMMIT_TAG" | sed -E 's/^deploy-staging-(v[0-9]+\.[0-9]+\.[0-9]+)$/\1/')
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans
