--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,8 +86,8 @@ deploy_app_staging:
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
+    DEPLOY_TAG: "${CI_COMMIT_TAG#deploy-staging-}"
     DOCKER_HOST: "unix:///var/run/docker.sock"
-    DEPLOY_TAG: "v1.0.0"
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
@@ -95,7 +95,6 @@ deploy_app_staging:
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
-          #export DEPLOY_TAG=$(echo "$CI_COMMIT_TAG" | sed -E 's/^deploy-staging-(v[0-9]+\.[0-9]+\.[0-9]+)$/\1/')
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans
@@ -112,6 +111,7 @@ deploy_app_staging:
     - docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG=~ /^deploy-staging-v\d+\.\d+\.\d+$/
+      when: manual
 
 deploy_app_production:
   stage: deploy_production
@@ -129,7 +129,6 @@ deploy_app_production:
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
-          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
@@ -146,3 +145,4 @@ deploy_app_production:
     - docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
+      when: manual
