--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,10 +83,11 @@ deploy_app_staging:
   stage: deploy_staging
   tags:
     - deploy
+  needs: ["build_image"]
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
-    DEPLOY_TAG: "${CI_COMMIT_TAG#deploy-staging-}"
+    DEPLOY_TAG: "$CI_COMMIT_TAG"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
@@ -110,7 +111,7 @@ deploy_app_staging:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG=~ /^deploy-staging-v\d+\.\d+\.\d+$/
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
       when: manual
 
 deploy_app_production:
@@ -119,7 +120,7 @@ deploy_app_production:
     - deploy
   services: []
   variables:
-    DEPLOY_TAG: "$CI_COMMIT_TAG#deploy-production-"
+    DEPLOY_TAG: "$CI_COMMIT_TAG"
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
@@ -144,5 +145,5 @@ deploy_app_production:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
       when: manual
