--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,13 +83,11 @@ deploy_app_staging:
   stage: deploy_staging
   tags:
     - deploy
-  extra_hosts:
-    - "gitlab:172.19.0.4"
   needs: ["build_image"]
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-staging"
-    DEPLOY_TAG: "$CI_COMMIT_TAG"
+    DEPLOY_TAG: "$CI_COMMIT_TAG#deploy-staging-"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
@@ -113,8 +111,7 @@ deploy_app_staging:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
-      when: manual
+    - if: $CI_COMMIT_TAG=~ /^deploy-staging-v\d+\.\d+\.\d+$/
 
 deploy_app_production:
   stage: deploy_production
@@ -147,5 +144,5 @@ deploy_app_production:
   after_script:
     - docker logout $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
+    - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
       when: manual
