--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -118,7 +118,6 @@ deploy_app_production:
     - deploy
   services: []
   variables:
-    DEPLOY_TAG: "$CI_COMMIT_TAG"
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
@@ -128,6 +127,7 @@ deploy_app_production:
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
         if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
           docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
@@ -144,4 +144,3 @@ deploy_app_production:
     - docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
-      when: manual
