--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,16 @@ variables:
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_NAME_BASE: "$CI_REGISTRY/adrian-manuel/spvending-managment"
   IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
-
+  GITLAB_ADVANCED_SAST_ENABLED: "true"
 stages:
   - test
   - sonarqube
   - build
   - deploy_staging
   - deploy_production
+
+include:
+  - template: Jobs/SAST.gitlab-ci.yml
 
 sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
