--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,5 @@ sonar.qualityGate.wait=true
 sonar.host.url=http://sonarqube:9000
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.junit.reportPaths=target/surefire-reports
-
+# Para habilitar reglas de seguridad (SAST)
+sonar.inclusions=**/*.java
