--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,46 +1,164 @@
-# Define las etapas (stages) de tu pipeline.
-# Puedes añadir más etapas si tu proyecto las necesita (build, test, deploy).
+image: docker:latest
+
+variables:
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: unix:///var/run/docker.sock
+  IMAGE_NAME_BASE: "$CI_REGISTRY/adrian-manuel/spvending-managment"
+  IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
+  GITLAB_ADVANCED_SAST_ENABLED: "true"
 stages:
-  - test # Esta etapa es para nuestro job de prueba de artefactos
+  - dependency_check
+  - test
+  - sonarqube
+  - build
+  - deploy_staging
+  - deploy_production
 
-# Definición del job para probar la subida de artefactos
-test_artifact_upload:
-  # Asigna el job a la etapa 'test'
-  stage: test
-
-  # Define los comandos que se ejecutarán en este job
+dependency_check:
+  stage: dependency_check
+  image: maven:3.9.6-eclipse-temurin-22
   script:
-    # Creamos un archivo simple con contenido de prueba
-    - echo "Este es un archivo de prueba para artefactos." > test_artifact.txt
-    # Añadimos la fecha y hora actual al archivo para que sea único en cada ejecución
-    - echo "La fecha y hora de la prueba es $(date)" >> test_artifact.txt
-    # Mostramos el contenido del archivo para verificarlo en los logs del job
-    - cat test_artifact.txt
-
-  # Configuración de los artefactos que este job producirá
+      - mvn org.owasp:dependency-check-maven:check
+      - |
+          if grep -q "<severity>Critical</severity>" target/dependency-check-report.xml; then
+            echo "❌ Vulnerabilidades críticas detectadas"; exit 1;
+          fi
   artifacts:
-    # Especifica las rutas de los archivos/directorios a incluir como artefactos
+      when: always
+      paths:
+        - target/dependency-check-report/dependency-check-report.html
+        - target/dependency-check-report/dependency-check-report.xml
+      reports:
+        dependency_scanning: target/dependency-check-report/dependency-check-report.xml
+
+sonarqube:
+  #image: sonarsource/sonar-scanner-cli:latest
+  image: maven:3.9-eclipse-temurin-22
+  stage: sonarqube
+  tags:
+    - sonar
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
+  cache:
+    key: "${CI_JOB_NAME}"
     paths:
-      - test_artifact.txt # Aquí indicamos que queremos guardar el archivo que acabamos de crear
+      - .sonar/cache
+  script:
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+              git fetch origin main
+              if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+                echo "Iniciando análisis con SonarQube..."
+                mvn clean verify
+                apt-get update && apt-get install -y wget unzip
+                wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+                unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+                mv sonar-scanner-5.0.1.3006-linux sonar-scanner
+                export PATH=$PATH:$(pwd)/sonar-scanner/bin
+                echo "El tag proviene de main. Ejecutando análisis..."
+                sonar-scanner -X -Dsonar.projectVersion=${CI_COMMIT_TAG} -Dsonar.token=$SONAR_TOKEN
+              else
+                echo "El tag NO proviene de main. Saltando análisis."
+              fi
+            else
+              echo "No es un tag. Saltando análisis."
+      fi
 
-    # Opcional: Define un nombre para el archivo ZIP de los artefactos
-    # name: "my-test-artifacts" 
+  rules:
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
+      when: always
+build_image:
+  stage: build
+  tags:
+    - build
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+  script:
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+        git fetch origin main
+        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+                  docker-compose -f docker-compose.yml build --no-cache --pull
+                  docker tag spvending-api-image "$IMAGE_NAME"
+                  docker push "$IMAGE_NAME"
+          else
+              echo "El tag NO proviene de main. Saltando build."
+        fi
+          else
+            echo "No es un tag. Saltando build."
+      fi
+  
 
-    # Opcional pero ALTAMENTE RECOMENDADO para pruebas:
-    # Define por cuánto tiempo se mantendrán los artefactos.
-    # Después de este tiempo, GitLab los eliminará automáticamente para liberar espacio.
-    expire_in: 5 min # Los artefactos de este job se eliminarán después de 5 minutos
+  after_script:
+    - docker logout $CI_REGISTRY
+  rules:
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
+      when: always
+  needs: ["sonarqube"]
 
-  # Configuración del job:
-  # Si la subida de artefactos (o cualquier parte del script) falla,
-  # este job se marcará como "fallido". Esto es lo que queremos para la prueba.
-  allow_failure: false
+deploy_app_staging:
+  stage: deploy_staging
+  tags:
+    - deploy
+  services: []
+  variables:
+    COMPOSE_PROJECT_NAME: "spvending-managment-staging"
+    DOCKER_HOST: "unix:///var/run/docker.sock"
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+  script:
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+        git fetch origin main
+        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-staging-}"
+          echo "=== DESPLEGANDO VERSIÓN ==="
+          docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
+          docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans
+          docker-compose -f docker-compose-staging.deploy.yml up -d 
+          echo "=== CONTENEDORES EN EJECUCIÓN ==="
+          docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+        else
+          echo "El tag NO proviene de main. Saltando build."
+        fi
+      else
+        echo "No es un tag. Saltando build."
+      fi
+  after_script:
+    - docker logout $CI_REGISTRY
+  rules:
+    - if: $CI_COMMIT_TAG=~ /^deploy-staging-v\d+\.\d+\.\d+$/
 
-  # Opcional: Especifica en qué ramas se ejecutará este job.
-  # 'only: ['main']' significa que solo se ejecutará en la rama 'main'.
-  # Si quieres que se ejecute en todas las ramas, puedes usar 'only: ['branches']'
-  # o simplemente omitir esta sección si quieres que se ejecute por defecto en todas las pushes.
-  # only:
-  #   - main
-  #   - master
-  #   - your-test-branch # Puedes especificar tu rama de prueba aquí
+deploy_app_production:
+  stage: deploy_production
+  tags:
+    - deploy
+  services: []
+  variables:
+    COMPOSE_PROJECT_NAME: "spvending-managment-production"
+    DOCKER_HOST: "unix:///var/run/docker.sock"
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+  script:
+    - |
+      if [ -n "$CI_COMMIT_TAG" ]; then
+        git fetch origin main
+        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
+          echo "=== DESPLEGANDO VERSIÓN ==="
+          docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
+          docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
+          docker-compose -f docker-compose-production.deploy.yml up -d 
+          echo "=== CONTENEDORES EN EJECUCIÓN ==="
+          docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+        else
+          echo "El tag NO proviene de main. Saltando despliegue."
+        fi
+      else
+        echo "No es un tag. Saltando despliegue."
+      fi
+  after_script:
+    - docker logout $CI_REGISTRY
+  rules:
+    - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
