--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
-sonar.projectKey=Adrian-Manuel_spvending-managment_AZb4dZuMpd5fbkcH_N3t
-sonar.projectName=spvending-managment
+sonar.projectKey=Adrian-Manuel_spvending-managment_AZcNH2-riWgZfVCpItS2
+sonar.projectName=SPVending Managment
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/main/java
 sonar.tests=src/test/java
 sonar.java.binaries=target/classes
 sonar.qualityGate.wait=true
-sonar.host.url=http://sonarqube:9000
+sonar.host.url=http://localhost:9000
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.junit.reportPaths=target/surefire-reports
 # Para habilitar reglas de seguridad (SAST)
