--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,11 @@ variables:
   GITLAB_ADVANCED_SAST_ENABLED: "true"
 stages:
   - test
-  - dependency_check
-  - sonarqube
   - build
   - deploy_staging
   - deploy_production
 dependency_check:
-  stage: dependency_check
+  stage: test
   image: maven:3.9.6-eclipse-temurin-22
   script:
       - mvn org.owasp:dependency-check-maven:check
@@ -33,9 +31,7 @@ dependency_check:
 sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
   image: maven:3.9-eclipse-temurin-22
-  stage: sonarqube
-  tags:
-    - sonar
+  stage: test
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
