--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,9 @@ dependency_check:
         - target/dependency-check-report/dependency-check-report.xml
       reports:
         dependency_scanning: target/dependency-check-report/dependency-check-report.xml
-
+  rules:
+    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
+      when: always
 sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
   image: maven:3.9-eclipse-temurin-22
