--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,23 +141,18 @@ deploy_app_production:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-        git fetch origin main
-        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+       
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           echo "=== DESPLEGANDO VERSIÓN ==="
-          az vm run-command invoke --command-id RunShellScript --name <SPVendingAPI> --resource-group SPVendingAPI_group --scripts "
+          az vm run-command invoke --command-id RunShellScript --name SPVendingAPI --resource-group SPVendingAPI_group --scripts "
             docker pull $IMAGE_NAME_BASE:$DEPLOY_TAG
             docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
             docker-compose -f docker-compose-production.deploy.yml up -d
           "
-          docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
-        else
-          echo "El tag NO proviene de main. Saltando despliegue."
-        fi
       else
         echo "No es un tag. Saltando despliegue."
       fi
-  after_script:
-    - docker logout $CI_REGISTRY
+  #after_script:
+    #- docker logout $CI_REGISTRY
   rules:
     - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
