--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
   IMAGE_NAME_BASE: "$CI_REGISTRY/adrian-manuel/spvending-managment"
   IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
   DOCKER_AUTH_CONFIG: '{"auths":{"registry.smartpadelautomation.com":{"username":"$REGISTRY_USER","password":"$REGISTRY_PASSWORD"}}}'
+  GIT_DEPTH: "0"
 stages:
   - test
   - build
@@ -36,7 +37,6 @@ sonarqube:
   stage: test
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
-    GIT_DEPTH: "0"
   cache:
     key: "${CI_JOB_NAME}"
     paths:
@@ -45,7 +45,7 @@ sonarqube:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
               git fetch origin main
-              if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+              if git branch -r --contains "$CI_COMMIT_TAG" | grep -q "origin/main"; then
                 echo "Iniciando análisis con SonarQube..."
                 mvn clean verify
                 apt-get update && apt-get install -y wget unzip
@@ -73,7 +73,7 @@ build_image:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
-        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+        if git branch -r --contains "$CI_COMMIT_TAG" | grep -q "origin/main"; then
                   docker-compose -f docker-compose.yml build --no-cache --pull
                   docker tag spvending-api-image "$IMAGE_NAME"
                   docker push "$IMAGE_NAME"
@@ -102,7 +102,7 @@ deploy_app_staging:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
-        if git merge-base --is-ancestor origin/main "$CI_COMMIT_TAG"; then
+        if git branch -r --contains "$CI_COMMIT_TAG" | grep -q "origin/main"; then
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-staging-}"
           echo "=== DESPLEGANDO VERSIÓN ==="
           docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
@@ -137,7 +137,6 @@ deploy_app_production:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-       
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           echo "=== DESPLEGANDO VERSIÓN ==="
           az vm run-command invoke --command-id RunShellScript --name SPVendingAPI --resource-group SPVendingAPI_group --scripts "
