--- a/docker-compose-staging.deploy.yml
+++ b/docker-compose-staging.deploy.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   spvending-api-image-staging:
-    image: gitlab:5050/adrian-manuel/spvending-managment:${DEPLOY_TAG}
+    image: registry.smartpadelautomation.com/adrian-manuel/spvending-managment:${DEPLOY_TAG}
     container_name: spvending-api-staging-container
     ports:
       - "8081:8080"
