--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,7 +124,7 @@ deploy_app_staging:
 
 deploy_app_production:
   stage: deploy_production
-  image: mcr.microsoft.com/azure-cli:latest
+  image: ubuntu:22.04
   tags:
     - deploy
   services: []
@@ -132,7 +132,9 @@ deploy_app_production:
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
   before_script:
-    - apt-get update && apt-get install -y docker.io
+    - apt-get update
+    - apt-get install -y curl docker.io python3-pip
+    - pip3 install azure-cli
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
     - az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
     - az account set --subscription $AZURE_SUBSCRIPTION_ID
